<resources>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_alphabet">Alphabet</string>
    <string name="title_children">For kids</string>
    <string name="title_favorites">Favourites</string>
    <string name="about_project">About the project</string>
    <string name="about_web" translatable="false">movapp.cz</string>
    <string name="about_team">Team</string>
    <string name="about_twitter" translatable="false">Twitter</string>
    <string name="about_instagram" translatable="false">Instagram</string>
    <string name="about_application">About the app</string>
    <string name="i_want_help">I want to help</string>
    <string name="about_license">License</string>
    <string name="about_version">Version: %1$s (%2$s)</string>
    <string name="about_partners">Partner project</string>
    <string name="about_stand_by_ukraine">Stand by Ukraine</string>
    <string name="about_umapa" translatable="false">Umapa</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="country_flag">country flag</string>
    <string name="play_transcription">play transcription</string>
    <string name="i_know">Native language</string>
    <string name="i_want_learn">Want to learn</string>
    <string name="settings">Settings</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="ukrainian_accusative">Ukrainian</string>
    <string name="czech">Czech</string>
    <string name="czech_accusative">Czech</string>
    <string name="slovak">Slovak</string>
    <string name="slovak_accusative">Slovak</string>
    <string name="polish">Polish</string>
    <string name="polish_accusative">Polish</string>
    <string name="alphabet_ukrainian">Ukrainian alphabet</string>
    <string name="alphabet_czech">Czech alphabet</string>
    <string name="alphabet_slovak">Slovak alphabet</string>
    <string name="alphabet_polish">Polish alphabet</string>
    <string name="search_word">Search for a word</string>
    <string name="title_settings">Settings</string>
    <string name="on_boarding_welcome">Welcome to MOVAPP!</string>
    <string name="on_boarding_choice_native">Choose the language you know</string>
    <string name="on_boarding_choice">Choose the language you want to learn</string>
    <string name="on_boarding_info_0_title">Excellent!</string>
    <string name="on_boarding_info_0_description">Let\'s learn %1$s. The application can be used offline without internet connection.</string>
    <string name="on_boarding_info_1_title">Dictionary</string>
    <string name="on_boarding_info_1_description">Learn hundreds of basic words and phrases by reading and listening. We sort words according to life situations.</string>
    <string name="on_boarding_info_2_title">Alphabet</string>
    <string name="on_boarding_info_2_description">Learn all the characters of the Ukrainian Cyrillic. Sample words will help you.</string>
    <string name="on_boarding_info_3_title">For kids</string>
    <string name="on_boarding_skip">Skip</string>
    <string name="on_boarding_exit">Start learning</string>
    <string name="on_boarding_info_3_description">Illustrated bilingual dictionary with dozens of printable cards.</string>
    <string name="memory_game">Memory game</string>
    <string name="memory_game_new_game">New game</string>
    <string name="fairy_tales">Fairy tales</string>
    <string name="fairy_tales_minutes">min</string>
    <string name="fairy_tales_czech_origin">Czech fairy tales</string>
    <string name="fairy_tales_ukrainian_origin">Ukrainian fairy tales</string>

    <string name="title_exercise">Procvičování</string>
    <string name="exercise_finish_title">Gratulujeme!</string>
    <string name="exercise_finish_subtitle">Cvičení jste úspěšně zvládli.\n\nNyní můžete pokračovat v procvičování, nebo se vrátit zpět na hlavní stránku.</string>
    <string name="exercise_finish_button_restart">Spustit znovu</string>
    <string name="exercise_finish_button_setup">Změnit nastavení</string>
    <string name="exercise_play_title">Označte, co znamená</string>
    <string name="exercise_play_button_home">Domů</string>
    <string name="exercise_play_button_next">Pokračovat</string>
    <string name="exercise_setup_title">Nejprve si vyberte jeden nebo více tematických okruhů a můžete začít.</string>
    <string name="exercise_setup_length">Nastavte si délku cvičení:</string>
    <string name="exercise_setup_button_start">Začít</string>
    <string name="exercise_setup_error_select_categories">Vyber si tématické okruhy</string>
    <string name="exercise_setup_error_select_length">Vyberte délku cvičení</string>

    <string name="one" translatable="false">1</string>
    <string name="five" translatable="false">5</string>
    <string name="ten" translatable="false">10</string>
    <string name="cd_img_beta_flag" translatable="false">beta flag</string>
</resources>