<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context=".ui.exercise.setup.ExerciseSetupFragment">

    <ImageView
        android:id="@+id/img_beta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_beta"
        android:contentDescription="@string/cd_img_beta_flag" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/img_beta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/congratulation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_repeatMode="reverse"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:text="@string/exercise_finish_title"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/exercise_finish_subtitle"
        />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/exercise_button_min_width"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setup"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/exercise_finish_button_restart"
        />

    <Button
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/exercise_button_min_width"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:layout_constraintStart_toEndOf="@id/restart"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/exercise_finish_button_setup"
        />

</androidx.constraintlayout.widget.ConstraintLayout>