<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dictionary">

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="cz.movapp.app.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" >
        <action
            android:id="@+id/action_navigation_dictionary_to_dictionaryContentFragment"
            app:destination="@id/dictionary_content_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="cz.movapp.app.ui.dictionary.DictionaryContentFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_dictionary_content" >
        <argument
            android:name="constraint"
            app:argType="string"
            android:defaultValue=""/>
        <argument
            android:name="translation_ids"
            app:argType="string[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alphabet"
        android:name="cz.movapp.app.ui.alphabet.AlphabetFragment"
        android:label="@string/title_alphabet"
        tools:layout="@layout/fragment_alphabet" >
    </fragment>

    <fragment
        android:id="@+id/navigation_children"
        android:name="cz.movapp.app.ui.children.ChildrenFragment"
        android:label="@string/title_children"
        tools:layout="@layout/fragment_children" >
    </fragment>

    <fragment
        android:id="@+id/dictionary_content_fragment"
        android:name="cz.movapp.app.ui.dictionary.DictionaryContentFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary_content" >
        <argument
            android:name="constraint"
            app:argType="string" />
        <argument
            android:name="translation_ids"
            app:argType="string[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="cz.movapp.app.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
    </fragment>
</navigation>