<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/on_boarding_welcome"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_choice_native"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/flag_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/image_flag_ua"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ua"
            android:background="@drawable/shadow"
            android:padding="@dimen/general_padding"
            app:layout_constraintEnd_toStartOf="@+id/image_flag_cz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ukrainian"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/image_flag_ua"
            app:layout_constraintRight_toRightOf="@+id/image_flag_ua"
            app:layout_constraintTop_toBottomOf="@+id/image_flag_ua" />

        <ImageView
            android:id="@+id/image_flag_cz"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cz"
            android:background="@drawable/shadow"
            android:padding="@dimen/general_padding"
            app:layout_constraintStart_toEndOf="@+id/image_flag_ua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/czech"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/image_flag_cz"
            app:layout_constraintRight_toRightOf="@+id/image_flag_cz"
            app:layout_constraintTop_toBottomOf="@+id/image_flag_cz" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flag_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/image_flag_sk"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sk"
            android:background="@drawable/shadow"
            android:padding="@dimen/general_padding"
            app:layout_constraintEnd_toStartOf="@+id/image_flag_pl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slovak"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/image_flag_sk"
            app:layout_constraintRight_toRightOf="@+id/image_flag_sk"
            app:layout_constraintTop_toBottomOf="@+id/image_flag_sk" />

        <ImageView
            android:id="@+id/image_flag_pl"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pl"
            android:background="@drawable/shadow"
            android:padding="@dimen/general_padding"
            app:layout_constraintStart_toEndOf="@+id/image_flag_sk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polish"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/image_flag_pl"
            app:layout_constraintRight_toRightOf="@+id/image_flag_pl"
            app:layout_constraintTop_toBottomOf="@+id/image_flag_pl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>